# EEG_Data_Viz

./: .gitignore  CONTRIBUTING.md  EEG_Viz.html  README.md  index.html  pyproject.toml  search.js
EEG_Viz/: algorithms.html
src/EEG_Viz/: algorithms.py  eegvix.ipynb  utils.py
tests/: test_fibonacci.py
