[tool.poetry]
name = "eeg-viz"
version = "0.1.0"
description = "Visualizing high-dimensional EEG data"
authors = ["Bryan Gonzalez <bsg262@gmail.com>", "CMI DAIR <dair@childmind.org>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "eeg_viz", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
hypertools = "^0.8.0"
ipykernel = "^6.29.5"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.4"
mypy = ">=1.13.0"
pre-commit = ">=4.0.1"
pytest-cov = ">=6.0.0"
ruff = ">=0.8.1"
deptry = ">=0.23.0"

[tool.poetry.group.docs.dependencies]
pdoc = ">=15.0.0"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
